Status refresh from socket

--- a/views/components/logline.pug
+++ b/views/components/logline.pug
@@ -1,5 +1,14 @@
 tr
-    td=loglevel
-    td=logdate
+    - var level = ""
+    if (loglevel === "W")
+        - level="text-warning"
+    else if (loglevel === "I")
+        - level="text-success"
+    else if (loglevel === "E")
+        - level="text-danger"
+    else if (loglevel === "D")
+        - level="text-info"
+    td(class=level)=loglevel
+    td.text-info=logdate
     td=logsrc
-    td=logmsg
+    td(class=level)=logmsg
