--- a/views/components/status/index.pug
+++ b/views/components/status/index.pug
@@ -1,8 +1,9 @@
 include ../../controls/jsonator/index
-div.content
-    +jsonator({"System":status,
-               "Components":app,
-               "Mallocs":mallocs,
-               "Tasks":tasks},
-              undefined,
-              {"editable": false})
++jsonator(["Status",
+          {"System":status,
+           "Components":app,
+           "Mallocs":mallocs,
+           "Tasks":tasks},
+           "Status",
+          {"editable": false,
+           "path":"/status"}])
