--- a/views/components/config/index.pug
+++ b/views/components/config/index.pug
@@ -1,3 +1,4 @@
 include ../../controls/jsonator/index
-form.content
-    +jsonator(config,"Config",{"editable": true})
+form(ws-send="Config" name="Config") 
+    button(type="submit" class="btn btn-outline-primary")="Save"
+    +jsonator(["Config",config],"Config",{"editable": true,"path":"/config", "expand": true})
