--- a/views/controls/jsonator/index.pug
+++ b/views/controls/jsonator/index.pug
@@ -1,17 +1,18 @@
-mixin renderarray(data,caption,options)
-    - const columns=data.reduce((cols,cur)=>[...cols,...Object.keys(cur).filter(col=>!cols.includes(col))],[])
+mixin renderarray(data,options)
+    - const columns=data[1].reduce((cols,cur)=>[...cols,...Object.keys(cur).filter(col=>!cols.includes(col))],[])
     table#table(class='table caption-top table-sm table-striped table-bordered' data-toggle="table" data-sortable="true")
         thead.table-light
             tr
                 each column in columns
                     th(scope="col" data-sortable="true")=column
         tbody
-        each row,idx in data
+        each row,idx in data[1]
             tr
-                - var path = options.path + "[" + idx + "]";
-                each column in columns
-                    td
-                        +jsonator(row[column],undefined,{...options,path,expand:true,plaintext:true})
+                - var path = `${options.path}[${idx}]`;
+                form(ws-send=options.path name=options.path)
+                    each column in columns
+                        td
+                            +jsonator([column,row[column]],undefined,{...options,path:`${path}/${column}`,expand:true,plaintext:true})
 
 mixin jsonator(data,caption,options)
     - const uuid = ()=>([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g,a=>(a^Math.random()*16>>a/4).toString(16))
@@ -19,57 +20,55 @@ mixin jsonator(data,caption,options)
     - const isObject = (val)=>(typeof val === "object") && (typeof val !== "string") && !isVersioned(val)
     - const isArray = (val)=>Array.isArray(val) && (typeof val !== "string")
     - const isValue = (val)=>!isArray(val) && !isObject(val)
-    - options = {...options,"path":options.path??""}
-    if isValue(data)
+    - options = {...options,"path":options?.path??`/${data[0]}`}
+    if isValue(data[1])
         div.d-flex
-            - var id=uuid()
+            - var versioned=isVersioned(data[1])
             if caption
-                span(id class="input-group-text")=caption
+                span(class="input-group-text")=caption
             input(type="text"
                   style=options.expand ? 'width: 100%;' : 'width: auto;'
                   readonly=!options.editable
-                  name=options.path
+                  name=options.path + (versioned?`(${data[1].version})`:"")
                   class=options.plaintext ? "form-control-plaintext" : "form-control"
-                  aria-describedby=id
-                  value=isVersioned(data)?data.value:data)
+                  value=versioned?data[1].value:data[1])
     else
         div.card
-            div.card-body(path=options.path)
-                if caption
-                    h5.card-title=caption
-                if text
-                    p.card-text=text
-                if isArray(data)
-                    +renderarray(data,undefined,options)
-                else
-                    - var stats = Object.entries(data).map(entry=>[...entry,uuid()])
-                    each stat,idx in stats
-                        if isValue(stat[1])
-                            +jsonator(stat[1],stat[0],{...options,"path":options.path+"/"+stat[0]})
-                    div.tabs
-                        if stats.find(stat=>isObject(stat[1]))
-                            ul(class="nav nav-tabs" role="tablist")
-                                - var firstPage = true
-                                each stat,idx in stats
-                                    if isObject(stat[1])
-                                        li.nav-item(role="presentation")
-                                            button(
-                                                class=`nav-link ${firstPage?"active":""}`
-                                                data-bs-toggle="tab" 
-                                                data-bs-target="#tab-content-"+stat[2]
-                                                type="button"
-                                                id="tab-"+stat[2]
-                                                aria-controls="tab-content-"+stat[2]
-                                                hx-target="#tab-content-"+stat[2]
-                                                role="tab")=stat[0]
-                                        - firstPage = false
-                            div(class="tab-content" role="tabpanel" path=options.path)
-                                - var firstPage = true
-                                each stat,idx in stats
-                                    if isObject(stat[1])
-                                        div(class=`tab-pane fade ${firstPage?"active show":""}` 
-                                            id="tab-content-"+stat[2] 
-                                            role="tabpanel" 
-                                            aria-labelledby="tab-"+stat[2])
-                                            +jsonator(stat[1],undefined,{...options,"path":options.path+"/"+stat[0]})
-                                        - firstPage = false
+            div.card-body
+                div
+                    if text
+                        p.card-text=text
+                    if isArray(data[1])
+                        +renderarray(data,options)
+                    else
+                        - var stats = Object.entries(data[1]).map(entry=>[...entry,uuid()])
+                        each stat,idx in stats
+                            if isValue(stat[1])
+                                +jsonator(stat,stat[0],{...options,"path":options.path+"/"+stat[0]})
+                        div.tabs
+                            if stats.find(stat=>isObject(stat[1]))
+                                ul(class="nav nav-tabs" role="tablist")
+                                    - var firstPage = true
+                                    each stat,idx in stats
+                                        if isObject(stat[1])
+                                            li.nav-item(role="presentation")
+                                                button(
+                                                    class=`nav-link ${firstPage?"active":""}`
+                                                    data-bs-toggle="tab" 
+                                                    data-bs-target="#tab-content-"+stat[2]
+                                                    type="button"
+                                                    id="tab-"+stat[2]
+                                                    aria-controls="tab-content-"+stat[2]
+                                                    hx-target="#tab-content-"+stat[2]
+                                                    role="tab")=stat[0]
+                                            - firstPage = false
+                                div(class="tab-content" role="tabpanel")
+                                    - var firstPage = true
+                                    each stat,idx in stats
+                                        if isObject(stat[1])
+                                            div(class=`tab-pane fade ${firstPage?"active show":""}` 
+                                                id="tab-content-"+stat[2] 
+                                                role="tabpanel"
+                                                aria-labelledby="tab-"+stat[2])
+                                                +jsonator(stat,undefined,{...options,"path":options.path+"/"+stat[0]})
+                                            - firstPage = false
