--- a/views/components/index.pug
+++ b/views/components/index.pug
@@ -5,10 +5,9 @@ html(lang='en' data-bs-theme='dark')
     meta(name="description" content="ESP32 on HTMX")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title htmlx test 1
-    script(src='dist/htmx.org/dist/htmx.js')
-    script(src='dist/htmx.org/dist/ext/ws.js')
-    link(rel='stylesheet' href='dist/bootstrap/dist/css/bootstrap.min.css')
-    link(rel='stylesheet' href='main.css')
+    link(as='style' rel="preload" onload="this.onload=null;this.rel='stylesheet'" href='dist/bootstrap/dist/css/bootstrap.min.css')
+    noscript
+      link(rel="stylesheet" href="style.css")
   body
     div#header(hx-get='/heading' hx-trigger="load")
       h1.display-6="Loading..."
@@ -32,5 +31,7 @@ html(lang='en' data-bs-theme='dark')
             class="tab-pane fade"
             role="tabpanel"
             aria-labelledby=`${page.name}-tab`)
+    script(src='dist/htmx.org/dist/htmx.js')
+    script(src='dist/htmx.org/dist/ext/ws.js')
     script(src='dist/bootstrap/dist/js/bootstrap.bundle.min.js')
     script(src='main.js')
