--- a/views/components/status/statuses.pug
+++ b/views/components/status/statuses.pug
@@ -1,4 +1,4 @@
-ul(class="nav nav-tabs" role="tablist")
+ul(class="nav" role="tablist")
     each page in Object.entries(paths.statuses)
         li.nav-item(role="presentation")
             button.nav-link(data-bs-toggle="tab"
