--- a/views/components/logs.pug
+++ b/views/components/logs.pug
@@ -1,10 +1,10 @@
-table(class='table caption-top table-sm')
+table(class='table table-striped table-dark table-hover caption-top table-sm table-striped table-bordered')
     caption
         button(hx-on:click="document.getElementById('logs').innerHTML=''" class="btn btn-outline-primary")="Clear"
-    thead.table-light
+    thead
         tr
-            th(scope="col")="Level"
-            th(scope="col")="Time"
-            th(scope="col")="Source"
-            th(scope="col")="Log"
+            th.text-secondary(scope="col")="Level"
+            th.text-secondary(scope="col")="Time"
+            th.text-secondary(scope="col")="Source"
+            th.text-secondary(scope="col")="Log"
     tbody#logs
