--- a/views/components/status/index.pug
+++ b/views/components/status/index.pug
@@ -1,6 +1,7 @@
 include ../../controls/jsonator/index
 +jsonator([undefined,data],undefined,{"editable": false,
-                                      "path":"/status", 
+                                      "path":"/status",
+                                      "tiled": false,
                                       "expand": true,
                                       "mutations" : [
                                         {
