--- a/views/controls/jsonator/mutators/mutators.pug
+++ b/views/controls/jsonator/mutators/mutators.pug
@@ -1,11 +1,10 @@
 mixin espcommand(value,caption,options)
     div.d-flex.align-self-end
         each command in value[1]
-            form(hx-put="/espcommand" 
-                hx-target=`#cmd-${options.path.replaceAll("/","_")}-res`
-                name=`cmd-${options.path}`) 
+            form(hx-put="/espcommand" hx-target=`#cmd${options.path.replaceAll("/","_")}-${command.caption}`) 
                 button(type="submit" class="btn btn-outline-secondary")=command.caption
-                input(type="hidden",name="name" value=options.parent.name)
-                div(id=`cmd-${options.path.replaceAll("/","_")}-res`)
+                input(id=`cmd${options.path.replaceAll("/","_")}-${command.caption}` type="hidden")
+                if options.parent
+                    input(type="hidden" name="name" value=options.parent.name)
                 each fld of Object.entries(command)
-                    input(type="hidden",name=fld[0] value=fld[1])
+                    input(type="hidden" name=fld[0] value=fld[1])
