--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,7 @@ html,body {
     color: $secondary !important;
     background-color: transparent !important;
     opacity: 80% !important;
+    border: none !important;
 }
 
 .nav-link.active {
