--- a/views/components/status/index.pug
+++ b/views/components/status/index.pug
@@ -1,7 +1,8 @@
 include ../../controls/jsonator/index
+- var tiled = true;
 +jsonator([undefined,data],undefined,{"editable": false,
                                       "path":"/status",
-                                      "tiled": false,
+                                      "tiled": statusTiled,
                                       "expand": true,
                                       "mutations" : [
                                         {
