--- a/views/controls/jsonator/mutators/mutators.pug
+++ b/views/controls/jsonator/mutators/mutators.pug
@@ -1,10 +1,13 @@
 mixin espcommand(value,caption,options)
     div.d-flex.align-self-end
         each command in value[1]
-            form(hx-put="/espcommand" hx-target=`#cmd${options.path.replaceAll("/","_")}-${command.caption}`) 
+            form(hx-put="/espcommand" hx-target=`#cmd${options.path.replaceAll("/","_")}-${command.caption}` hx-swap="innerHTML") 
                 button(type="submit" class="btn btn-outline-secondary")=command.caption
-                input(id=`cmd${options.path.replaceAll("/","_")}-${command.caption}` type="hidden")
+                div(id=`cmd${options.path.replaceAll("/","_")}-${command.caption}` style="display=none;")
                 if options.parent
                     input(type="hidden" name="name" value=options.parent.name)
                 each fld of Object.entries(command)
                     input(type="hidden" name=fld[0] value=fld[1])
+
+mixin esppin(value,caption,options)
+    div=JSON.stringify(value)
